gcc/testsuite/gcc.dg/noncompile/incomplete-1.c
struct a
{
  struct b t;	/* { dg-error "has incomplete type" } */
};
